--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.15",
+    "@arcjet/ip": "^1.0.0-beta.15",
+    "@arcjet/next": "^1.0.0-beta.15",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -31,6 +36,7 @@
     "next": "16.0.5",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
+    "postmark": "^4.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
