--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@arcjet/next": "^1.0.0-beta.15",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@zxcvbn-ts/core": "^3.0.4",
@@ -43,6 +45,7 @@
     "react-hook-form": "^7.67.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "ua-parser-js": "^2.0.6",
     "zod": "^4.1.13"
   },
   "devDependencies": {
