--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@arcjet/inspect": "^1.0.0-beta.15",
     "@arcjet/ip": "^1.0.0-beta.15",
     "@arcjet/next": "^1.0.0-beta.15",
+    "@better-auth/passkey": "^1.4.4",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -43,6 +44,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
+    "react-qr-code": "^2.0.18",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "ua-parser-js": "^2.0.6",
