--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@arcjet/ip": "^1.0.0-beta.15",
     "@arcjet/next": "^1.0.0-beta.15",
     "@better-auth/passkey": "^1.4.4",
+    "@better-auth/stripe": "^1.4.5",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
@@ -48,6 +50,7 @@
     "react-hook-form": "^7.67.0",
     "react-qr-code": "^2.0.18",
     "sonner": "^2.0.7",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "ua-parser-js": "^2.0.6",
     "zod": "^4.1.13"
